# RA4M3_Zephyr

./: CMakeLists.txt  Kconfig  README.md  west.yml
app/hello_world_renesas/: CMakeLists.txt
boards/arm/ek_ra4m3/: CMakeLists.txt  Kconfig.board  Kconfig.defconfig  board.cmake  ek_ra4m3.dts  ek_ra4m3.yaml  ek_ra4m3_defconfig
drivers/: CMakeLists.txt  Kconfig
drivers/gpio/: CMakeLists.txt  Kconfig.ra  gpio_ra.c
drivers/serial/: CMakeLists.txt  Kconfig.ra  uart_ra.c
dts/arm/renesas/: pinctrl_renesas_ra.h  ra4m3-pinctrl.dtsi  ra4m3.dtsi
dts/bindings/arm/: renesas,ra-sci.yaml
dts/bindings/gpio/: renesas,ra-gpio.yaml
dts/bindings/pinctrl/: renesas,ra-pinctrl.yaml  renesas,ra-pinmux.yaml
dts/bindings/serial/: renesas,ra-uart.yaml
include/dt-bindings/pinctrl/: ra-pinctrl.h
misc/: r2000.dts.pre.tmp
misc/ek_ra4w1_ek_ra6m3/.svn/: wc.db
misc/ek_ra4w1_ek_ra6m3/modules/hal/renesas/fsp/src/: CMakeLists.txt
misc/ek_ra4w1_ek_ra6m3/modules/hal/renesas/fsp/src/bsp/: CMakeLists.txt
misc/ek_ra4w1_ek_ra6m3/modules/hal/renesas/fsp/src/bsp/cmsis/: CMakeLists.txt
misc/ek_ra4w1_ek_ra6m3/modules/hal/renesas/fsp/src/bsp/cmsis/Device/RENESAS/: CMakeLists.txt
misc/ek_ra4w1_ek_ra6m3/modules/hal/renesas/fsp/src/bsp/mcu/all/: CMakeLists.txt
misc/ek_ra4w1_ek_ra6m3/modules/hal/renesas/fsp/src/r_flash_lp/: CMakeLists.txt
misc/ek_ra4w1_ek_ra6m3/modules/hal/renesas/fsp/src/r_ioport/: CMakeLists.txt
misc/ek_ra4w1_ek_ra6m3/modules/hal/renesas/fsp/src/rm_ble_abs/: CMakeLists.txt
misc/ek_ra4w1_ek_ra6m3/zephyr/: west.yml
soc/arm/: CMakeLists.txt
zephyr/: module.yml
(+91 files in other folders)
